--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@usecapsule/react-sdk": "^4.20.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.9",
+    "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "vite-plugin-node-polyfills": "^0.23.0",
